--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,14 @@
-.App {
-  text-align: center;
+
+:root{
+  --primary-color: #22254b;
+  --secondary-color: #373b69;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.middle{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .loader{
   height: 100vh;
@@ -24,38 +22,6 @@ h1{
   font-size: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-
-
-:root{
-  --primary-color: #22254b;
-  --secondary-color: #373b69;
-}
-
-
 *{
   padding: 0;
   margin: 0;
@@ -66,7 +32,8 @@ body{
   font-family: Montserrat, sans-serif ;
   background-color: var(--primary-color);
   width: 100vw;
-  overflow-x: hidden;
+  
+  /* overflow-x: hidden; */
 }
 header{
   padding: 1rem;
@@ -92,11 +59,14 @@ header{
 #search:focus{
   background: var(--primary-color);
 }
-
+h3{
+  padding-top: 15px;
+}
 main{
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  width:100vw;
   overflow-x: hidden;
 }
 .movie{
@@ -126,6 +96,8 @@ main{
 
 .movie-info h3{
   margin-top: 0;
+  height: 60px;
+  padding: auto 13px;
 }
 
 .movie-info span{
